# SparseANN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  generate_random.cpp  parlayann_rand_test.cpp  parlayann_unit_test.cpp
include/: bitvector.h  coord_order.h  count_min_sketch.h  count_sketch.h  forward_index.h  ground_truth.h  hashutil.h  inverted_index.h  jl_transform.h  linscan.h  max_sketch.h  near_sketch.h  parlay_util.h  point_range_util.h  rabitq.h  sinnamon_sketch.h  synthetic.h  test_util.h  vector_utils.h
scripts/: cluster_analysis.py  plot_triangle_inequality.py
src/: CMakeLists.txt  ground_truth.cpp  linscan.cpp  max_sketch.cpp
test/: CMakeLists.txt  apply_ordering.cpp  benchmark_bitvector.cpp  bfs_tree_donut.cpp  bfs_tree_graph.cpp  comp_bin_groundtruth.cpp  comp_csr_groundtruth.cpp  comp_groundtruth.cpp  compare_dist.cpp  count_freq_of_nearest_neighbors.cpp  count_min_sketch.cpp  csr_to_fvecs.cpp  eval_dist_approx.cpp  generate_barabasi_albert.cpp  generate_gaussian_mixture.cpp  generate_heatmap.cpp  generate_knn_points.cpp  generate_uniform.cpp  graph_bfs_tree.cpp  graph_bfs_tree_donut.cpp  graph_bfs_tree_edges.cpp  high_freq_convert.cpp  high_freq_record.cpp  identify_clusters.cpp  jl_transform.cpp  max_sketch.cpp  measure_overretrieval.cpp  measure_recall.cpp  mips_histogram.cpp  near_sketch.cpp  parlay  perf_linscan.cpp  profile_sketch.cpp  read_csr.cpp  read_fvecs.cpp  read_gt.cpp  reorder.cpp  trec_sample.cpp  triangle_inequality.cpp  truncate_csr.cpp  (+5 more)
